# VBBinaryLensing

./: .gitignore  .travis.yml  ESPL.tbl  LICENSE.txt  MANIFEST.in  Makefile  NOTICE.txt  README.md  howtopython.txt  instructions.cpp  pyproject.toml  requirements.txt  satellite1.txt  setup.cfg  setup.py
VBBinaryLensing/: __init__.py
VBBinaryLensing/data/: ESPL.tbl  OB151212coords.txt  satellite2.txt
VBBinaryLensing/lib/: VBBinaryLensingLibrary.cpp  VBBinaryLensingLibrary.h  bindings.cpp  python_bindings.cpp
VBBinaryLensing/tests/: test_all.py  test_magnification.py
VBBinaryLensingLibrary.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
docs/: AccuracyControl.md  AdvancedControl.md  Binary lenses.md  BinaryLenses.md  BinarySources.md  CriticalCurvesAndCaustics.md  LightCurves.md  LimbDarkening.md  Makefile  OrbitalMotion.md  Parallax.md  Single lenses.md  SingleLenses.md  Testdoc.md  VBBinaryLensing.rst  conf.py  documentation.md  index.rst  readme.md  reviews.md
docs/VBBinaryLensing/: index.rst
docs/api/: VBBinaryLensing.VBBinaryLensing.rst
docs/source/: VBBinaryLensing.rst  modules.rst
examples/cpp_examples/: instructions.cpp
examples/cpp_examples/ESPL/: Makefile  main  main.cpp
examples/cpp_examples/binary_lens/: Makefile  caustics.csv  main  main.cpp  output.csv  plots.ipynb
examples/cpp_examples/binary_lens/.ipynb_checkpoints/: Makefile-checkpoint  caustics-checkpoint.csv  main-checkpoint.cpp  output-checkpoint.csv
examples/python_examples/: binary_lens.ipynb
examples/python_examples/.ipynb_checkpoints/: python_wrapper_test-checkpoint.ipynb
newdocs/: documentation.md  readme.md
pyVBB.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/: Makefile.python  bindings.cpp
