[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "VBBinaryLensing"
description = "VBBinaryLensing is a tool for efficient computation in gravitational microlensing events using the advanced contour integration method, supporting single and binary lenses."
version = "3.6.1"
keywords = ['Microlsening magnification and astrometry']
authors = [
    { name = "Valerio Bozza", email = "valboz@sa.infn.it" },
]
license = { text = "GPL-3.0" }
requires-python = ">=3.6,<4"
readme = "README.md"
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'Topic :: Software Development :: Build Tools',
    'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
    'Programming Language :: Python :: 3',
]
dependencies = [
    "numpy",
    "pytest",
    "pybind11",
    "setuptools",
    "sphinx-astropy",
]

[project.urls]
Homepage = "https://github.com/valboz/VBBinaryLensing"
Documentation = "https://www.fisica.unisa.it/gravitationastrophysics/VBBinaryLensing.htm"

